--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
+		"@iconscout/react-unicons": "^2.0.2",
 		"@mui/material": "^5.15.9",
 		"@mui/material-next": "^6.0.0-alpha.122",
+		"@testing-library/user-event": "^14.5.2",
 		"axios": "^1.6.7",
+		"framer-motion": "^11.0.3",
+		"lucide-react": "^0.325.0",
 		"react": "^18.2.0",
 		"react-alice-carousel": "^2.8.0",
 		"react-calendar": "^4.8.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.0.1",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.22.0",
 		"react-slick": "^0.30.1",
